--- a/index.html
+++ b/index.html
@@ -302,16 +302,16 @@
       <div class="one">
           <h1>Office/setup – Microsoft Office Setup – www.office/setup</h1>
           <BR>
-          <center><p>
-             • Step 1: Go to office setup website office.com/setup. Open any browser, visit www.office.com/setup or office.com/setup.
-• Step 2: Sign Microsoft office Account.
-• Step 3: Find your Microsoft Office setup product key.
-• Step 4: Enter Microsoft office product key.
-• Step 5: Select your country and language.
-• Step 6: Download office setup and follow on-Screen instructions.
-• Step 7: Finish the Microsoft office setup installation process and run the Microsoft office applications.
-• Step 9: Microsoft office prepared to use!!	
-</p></center>
+          <center><ul>
+            <li> • Step 1: Go to office setup website office.com/setup. Open any browser, visit www.office.com/setup or office.com/setup.</li>
+<li>• Step 2: Sign Microsoft office Account.</li>
+<li>• Step 3: Find your Microsoft Office setup product key.</li>
+<li>• Step 4: Enter Microsoft office product key.</li>
+<li>• Step 5: Select your country and language.</li>
+<li>• Step 6: Download office setup and follow on-Screen instructions.</li>
+<li>• Step 7: Finish the Microsoft office setup installation process and run the Microsoft office applications.</li>
+<li>• Step 9: Microsoft office prepared to use!!</li>	
+</ul></center>
           
           
       </div>
