--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="activate your Lowe's credit card by entering your card details and personal information. Activation is quick and immediate, allowing you to start using your card right away">
-    <meta name="keywords" content="Lowes.syf.com/activate">
+    <meta name="description" content="Easily set up Microsoft Office using your product key with clear instructions and expert guidance for installation and activation.">
+    <meta name="keywords" content="Office/setup">
 
-    <title>Lowes.syf.com/activate - lowe s lowe's syf activate - lowe's.syf.com activate</title>
+    <title>office.com/setup – Microsoft Office Setup – www.office.com/setup
+</title>
 
    
 
