--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         * {
             padding: 0;
             margin: 0;
-            box-sizing: border-box;
+          color: #333;
+            line-height: 1.6;
         }
         body {
             font-family: "Montserrat", sans-serif;
