--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ a:hover {
 
     <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key</h2>
     <ol>
-        <li>Go to the Office Setup Website: Open any browser and visit <a href="https://www.office.com/setup">office.com/setup</a> or <a href="https://www.office.com/setup">www.office.com/setup</a>.</li>
+        <li>Go to the Office Setup Website: Open any browser and visit office/setup.</li>
         <li>Sign In to Your Microsoft Office Account: Log in with your Microsoft account credentials.</li>
         <li>Find Your Microsoft Office Setup Product Key: Locate your 25-digit product key provided with your purchase.</li>
         <li>Enter Your Microsoft Office Product Key: Input the product key when prompted.</li>
@@ -96,7 +96,7 @@ a:hover {
     <p><strong>Microsoft Office is Ready to Use!</strong></p>
 
     <h2>How to Get Microsoft Office Setup Support</h2>
-    <p>For cost-effective and reliable support for your Microsoft Office setup, visit <a href="https://www.office.com/setup">www.office.com</a>. MS Office is a critical tool for both home and office users, making it essential to resolve any issues swiftly.</p>
+    <p>For cost-effective and reliable support for your Microsoft Office setup, visit MS Office is a critical tool for both home and office users, making it essential to resolve any issues swiftly.</p>
     <p>Many users may not be familiar with the technical aspects of fixing setup-related issues. Thankfully, websites like office.com/setup offer easy access to professional tech support. Here are some benefits of using their services:</p>
     <ul>
         <li><strong>Time and Effort Savings:</strong> If you encounter any issues with MS Office setup, simply call their support, and a professional will guide you through the troubleshooting process. This saves significant time compared to visiting a physical support center.</li>
@@ -109,7 +109,7 @@ a:hover {
     <h2>Our Services</h2>
     <h3>Install Office Setup</h3>
     <ol>
-        <li>Sign in to Your Microsoft Account: Go to <a href="https://www.office.com/setup">www.office.com/setup</a> and sign in with your Microsoft account.</li>
+        <li>Sign in to Your Microsoft Account: Go to office/setup and sign in with your Microsoft account.</li>
         <li>Enter Your Product Key: Input the 25-digit alphanumeric Office setup product key.</li>
         <li>Select Country and Language: Choose your preferred country and language settings.</li>
         <li>Start Installation: Click on "Next" to begin the Office installation process.</li>
@@ -166,7 +166,7 @@ a:hover {
         <p><strong>Why Wait? Get Support Now!</strong></p>
         <ul>
             <li>Live Chat Support: Ask any questions you have via our live chat online.</li>
-            <li>Visit Us: For detailed guidance and assistance, visit <a href="https://www.office.com/setup">office.com/setup</a>.</li>
+            <li>Visit Us: For detailed guidance and assistance, visit office/setup.</li>
         </ul>
         <p>Our dedicated support team is ready to help you make the most out of your Microsoft Office installation.</p>
     </div>
@@ -215,7 +215,7 @@ a:hover {
         <p><strong>Why Choose Setup Office?</strong></p>
         <p>Setup Office is your go-to service provider for MS Office setup and installation for both home and office use. We offer cost-effective and reliable services. If you have any questions or need assistance, you can reach out to us anytime.</p>
 
-        <p><strong>Visit Us:</strong> For more details, visit <a href="https://www.office.com/setup">office.com/setup</a> or our UK support site <a href="https://www.setupoffice.co.uk">setupoffice.co.uk</a>.</p>
+        <p><strong>Visit Us:</strong> For more details, visit office/setup or our UK support site setup/office</p>
     </div>
 
     <div class="container">
@@ -258,7 +258,7 @@ a:hover {
         <p><strong>Why Wait? Get Support Now!</strong></p>
         <ul>
             <li>Live Chat Support: Ask any questions you have via our live chat online.</li>
-            <li>Visit Us: For detailed guidance and assistance, visit <a href="https://www.office.com/setup">office.com/setup</a>.</li>
+            <li>Visit Us: For detailed guidance and assistance, visit office/setup.</li>
         </ul>
         <p>Our dedicated support team is ready to help you make the most out of your Microsoft Office installation.</p>
     </div>
