--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ a:hover {
 
     <h2>How to Get Microsoft Office Setup Support</h2>
     <p>For cost-effective and reliable support for your Microsoft Office setup, visit MS Office is a critical tool for both home and office users, making it essential to resolve any issues swiftly.</p>
-    <p>Many users may not be familiar with the technical aspects of fixing setup-related issues. Thankfully, websites like office.com/setup offer easy access to professional tech support. Here are some benefits of using their services:</p>
+    <p>Many users may not be familiar with the technical aspects of fixing setup-related issues. Thankfully, websites like office/setup offer easy access to professional tech support. Here are some benefits of using their services:</p>
     <ul>
         <li><strong>Time and Effort Savings:</strong> If you encounter any issues with MS Office setup, simply call their support, and a professional will guide you through the troubleshooting process. This saves significant time compared to visiting a physical support center.</li>
         <li><strong>Immediate Assistance:</strong> Online tech support provides immediate access to professionals, reducing waiting times that are common at offline centers.</li>
@@ -122,7 +122,7 @@ a:hover {
     <ol>
         <li><strong>Sign in to Your Office Account:</strong></li>
         <ul>
-            <li>Go to <a href="https://www.office.com/setup">www.office.com/setup</a>.</li>
+            <li>Go to office/setup</li>
             <li>Sign in with your Microsoft account. If you don’t have an account, create a new one and use the same login credentials to sign into your My Office account.</li>
         </ul>
         <li><strong>Redeem Your Product Key:</strong></li>
