--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ a:hover {
 <body>
 
 <div class="container">
-    <h1>Microsoft Office Setup Guide</h1>
+    <h1>office.com/setup – Microsoft Office Setup – www.office.com/setup</h1>
 
-    <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key</h2>
+    <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key?</h2>
     <ol>
         <li>Go to the Office Setup Website: Open any browser and visit office/setup.</li>
         <li>Sign In to Your Microsoft Office Account: Log in with your Microsoft account credentials.</li>
@@ -95,7 +95,7 @@ a:hover {
     </ol>
     <p><strong>Microsoft Office is Ready to Use!</strong></p>
 
-    <h2>How to Get Microsoft Office Setup Support</h2>
+    <h2>How to Get Microsoft Office Setup Support?</h2>
     <p>For cost-effective and reliable support for your Microsoft Office setup, visit MS Office is a critical tool for both home and office users, making it essential to resolve any issues swiftly.</p>
     <p>Many users may not be familiar with the technical aspects of fixing setup-related issues. Thankfully, websites like office/setup offer easy access to professional tech support. Here are some benefits of using their services:</p>
     <ul>
@@ -114,11 +114,11 @@ a:hover {
         <li>Select Country and Language: Choose your preferred country and language settings.</li>
         <li>Start Installation: Click on "Next" to begin the Office installation process.</li>
     </ol>
-    <p><strong>Where to Find Your Microsoft Office Setup Product Key:</strong> The Microsoft Office Setup Product Key is a combination of 25 alphanumeric characters. You can find it printed on the back side of your Microsoft Office Setup Card.</p>
+    <p><strong>Where to Find Your Microsoft Office Setup Product Key?:</strong> The Microsoft Office Setup Product Key is a combination of 25 alphanumeric characters. You can find it printed on the back side of your Microsoft Office Setup Card.</p>
 
     <h2>How to Proceed with Microsoft Office Setup Online</h2>
     <p>Here’s a step-by-step guide to setting up Microsoft Office using your 25-digit alphanumeric product key.</p>
-    <p><strong>Example Product Key:</strong> ABD3M-GRT5B-45RFJ-W3R5Y-C5T7U</p>
+    <p><strong>Example Product Key:</strong> ABD3M-GRT5B-45RFJ-W3R5Y-C5T9U</p>
     <ol>
         <li><strong>Sign in to Your Office Account:</strong></li>
         <ul>
@@ -127,7 +127,7 @@ a:hover {
         </ul>
         <li><strong>Redeem Your Product Key:</strong></li>
         <ul>
-            <li>Enter your 25-digit product key (e.g., ABD3M-GRT5B-45RFJ-W3R5Y-C5T7U).</li>
+            <li>Enter your 25-digit product key (e.g., ABD3M-GRT5B-45RFJ-W3R5Y-C5T9U).</li>
         </ul>
         <li><strong>Install Your Product:</strong></li>
         <ul>
@@ -172,7 +172,7 @@ a:hover {
     </div>
 
     <div class="container">
-        <h2>How We Can Help You with Your Office Setup Issues</h2>
+        <h2>How We Can Help You with Your Office Setup Issues?</h2>
         <p><strong>Our Comprehensive Support Services:</strong></p>
         <ul>
             <li><strong>Compatibility Issues:</strong> Identify and resolve any compatibility issues with your system and Microsoft Office setup.</li>
