--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ a:hover {
             <li><strong>Real-Time Document Collaboration:</strong> Work together on documents with coauthoring features in Word, PowerPoint, and OneNote.</li>
             <li><strong>View others' edits and refer back to document versions with improved version history.</strong></li>
             <li><strong>Simplified Sharing:</strong> Share documents easily with a single click. Use modern attachments in Outlook to attach files from OneDrive and configure permissions without leaving Outlook.</li>
-            <li><strong>Cross-Device Accessibility:</strong> Access and edit your Office 2016 documents on any device, whether it's a PC, Mac, Windows, Apple®, or Android™ phone or tablet.</li>
+            <li><strong>Cross-Device Accessibility:</strong> Access and edit your Office 2016 documents on any device, whether it's a PC, Mac, Windows, ios, or Android phone or tablet.</li>
         </ul>
 
         <h3>Office 2016 Features:</h3>
