--- a/index.html
+++ b/index.html
@@ -5,83 +5,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Easily set up Microsoft Office using your product key with clear instructions and expert guidance for installation and activation.">
+   <meta name="description" content="Easily set up Microsoft Office using your product key with clear instructions and expert guidance for installation and activation.">
     <meta name="keywords" content="Office/setup">
     <title>office.com/setup – Microsoft Office Setup – www.office.com/setup</title>
 
     <style>
         body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
-}
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
 
-.container {
-    max-width: 1650px;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    border-radius: 5px;
-}
+        .container {
+            max-width: 1650px;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            border-radius: 5px;
+        }
 
-h1, h2, h3 {
-    color: #333;
-    margin-top: 0;
-}
+        h1, h2, h3 {
+            color: #333;
+            margin-top: 0;
+        }
 
-p {
-    margin-bottom: 20px;
-}
+        p {
+            margin-bottom: 20px;
+        }
 
-ol, ul {
-    margin-bottom: 20px;
-    padding-left: 20px;
-}
+        ol, ul {
+            margin-bottom: 20px;
+            padding-left: 20px;
+        }
 
-a {
-    color: #007bff;
-    text-decoration: none;
-}
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
 
-a:hover {
-    text-decoration: underline;
-}
+        a:hover {
+            text-decoration: underline;
+        }
 
-.container > h2 {
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
+        .container > h2 {
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
 
-.container > h3 {
-    margin-top: 20px;
-}
+        .container > h3 {
+            margin-top: 20px;
+        }
 
-.container > p strong {
-    color: #007bff;
-}
+        .container > p strong {
+            color: #007bff;
+        }
 
-.container > ol > li,
-.container > ul > li {
-    margin-bottom: 10px;
-}
+        .container > ol > li,
+        .container > ul > li {
+            margin-bottom: 10px;
+        }
 
-.container > ol > li:last-child,
-.container > ul > li:last-child {
-    margin-bottom: 0;
-}
+        .container > ol > li:last-child,
+        .container > ul > li:last-child {
+            margin-bottom: 0;
+        }
 
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
     <h1>office.com/setup – Microsoft Office Setup – www.office.com/setup</h1>
-
+    <a href="https://www.office.com/setup" class="button">Get Started</a>
     <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key?</h2>
     <ol>
         <li>Go to the Office Setup Website: Open any browser and visit office/setup.</li>
