--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 <body>
 
 <div class="container">
-    <h1>office.com/setup – Microsoft Office Setup – www.office.com/setup</h1>
-    <a href="https://www.office.com/setup" class="button">Get Started</a>
+    <center><h1>office.com/setup – Microsoft Office Setup – www.office.com/setup</h1></center>
+    <center><a href="https://www.office.com/setup" class="button">Get Started</a></center>
     <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key?</h2>
     <ol>
         <li>Go to the Office Setup Website: Open any browser and visit office/setup.</li>
