--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="keywords" content="Office/setup">
     <title>office.com/setup – Microsoft Office Setup – www.office.com/setup</title>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y7HZX3BSYE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y7HZX3BSYE');
+</script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
